bnc#825891 fdo#69979 SwCrsrShell::ExtendedSelectAll: exclude headers, too

It turns out, normal Ctrl-A doesn't select headers, footers and fly
content, either (just like not selecting footnotes). So do the same when
in the "doc starts with table" special mode.

Change-Id: Ib9bc397944a4d07ea03bc326f1536733c57f42e6
(cherry picked from commit 232df42b8dc0b4f7a335d2931fc0f29e73b8bca0)

Conflicts:
	sw/qa/extras/odfimport/odfimport.cxx
	sw/source/core/crsr/crsrsh.cxx